commit de betoo

--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c3d8ea19-1295-4cd5-beff-28727f321760">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="288"/>
+	<property name="ireport.y" value="356"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -117,6 +117,14 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 				<reportElement x="320" y="32" width="31" height="20" uuid="b0cf2130-63f4-45e8-9c29-55570e8b5584"/>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="197" y="32" width="100" height="20" uuid="cec00a1a-473f-4dee-a80c-21eb6d7f70ac"/>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="355" y="32" width="100" height="20" uuid="7a7b72cb-e892-4d64-b4e5-84f70380a4fd"/>
+				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -128,7 +136,7 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="475" splitType="Stretch">
+		<band height="402" splitType="Stretch">
 			<textField>
 				<reportElement x="219" y="111" width="100" height="20" uuid="2594a749-d098-4153-a851-764ef1d2189a"/>
 				<textFieldExpression><![CDATA[$F{salarioactual}]]></textFieldExpression>
@@ -262,11 +270,13 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="176" splitType="Stretch"/>
+		<band height="27" splitType="Stretch">
+			<staticText>
+				<reportElement x="178" y="3" width="199" height="20" uuid="a904b1d4-d690-45ac-8066-9b4ccd020c67"/>
+				<text><![CDATA[Derechos Reservados  UES/FIA/ESISI]]></text>
+			</staticText>
+		</band>
 	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
-	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
 	</summary>
