--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -158,6 +158,14 @@
                                                 <li><a href="#" th:href="@{/puestos/reporte/puesto}">Reporte Puestos a Caducar</a></li>
 					</ul>
 				</li>
+                                  <li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Misiones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+					<ul class="dropdown-menu forAnimate" role="menu">
+						<li><a href="#" th:href="@{/misiones/}">Consultar Misiones</a></li>
+                                                <li><a href="#" th:href="@{/misiones/new/mision}">Crear Misiones</a></li>
+                                                <li><a href="#" th:href="@{/misiones/reporte/mision}">Reporte de Misiones</a></li>
+					</ul>
+				</li>
                                 
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Empleados <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
