agregado nuevos estilos

--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -33,7 +33,10 @@
     <br>
 
     <form name='f' th:action="@{/j_spring_security_check}" method='POST'>
-        <h2>Introdusca nombre de usuario y contraseña:</h1>
+          <div class="row text-center" align="center">
+                             <img src="../../static/image/login.jpg" width="210" th:src="@{/image/login.jpg}" />
+                    </div>
+        <h2>Introduzca nombre de usuario y contraseña:</h1>
         <div class="inset">
             <p>
             <div th:if="${#request.getParameter('error') == 'true'}"
