--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -6,11 +6,11 @@ body {
 	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
   color:whitesmoke;
   font-size:12px;
-  background:#333 /*url(/images/classy_fabric.png)*/;
+  background:#186218/*url(/images/classy_fabric.png)*/;
 }
 
 form {
- 	background:#111; 
+ 	background: #333f32; 
   width:600px;
   margin:30px auto;
   border-radius:0.4em;
@@ -72,7 +72,7 @@ form h1:after {
 }
 
 label {
- 	color:#666;
+ 	color:#fff;
   display:block;
   padding-bottom:9px;
 }
@@ -81,7 +81,7 @@ input[type=text],
 input[type=password] {
     width:100%;
   padding:8px 5px;
-  background:linear-gradient(#1f2124, #27292c);
+  background:linear-gradient(#449d44, #449d44 );
   border:1px solid #222;
   color: white;
   box-shadow:
@@ -115,7 +115,7 @@ input[type=checkbox] {
 .p-container span {
   display:block;
   float:left;
-  color:#0d93ff;
+  color:#fff;
   padding-top:8px;
 }
 
@@ -127,7 +127,7 @@ input[type=submit] {
     inset 0 1px 0 rgba(255,255,255,0.3),
     inset 0 10px 10px rgba(255,255,255,0.1);
   border-radius:0.3em;
-  background:#0184ff;
+  background:#03800b;
   color:white;
   float:right;
   font-weight:bold;
