--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,15 +3,15 @@
   font-family: verdana;
   font-size: 12px;
   font-weight: 200;
-  background-color: #2e353d;
+  background-color: #186218;
   position: fixed;
   top: 500px;
   width: 300px;
   height: 60%;
-  color: #e1ffff;
+  color: #186218;
 }
 .nav-side-menu .brand {
-  background-color: #23282e;
+  background-color: #186218;
   line-height: 50px;
   display: block;
   text-align: center;
@@ -54,19 +54,19 @@
 .nav-side-menu ul .active,
 .nav-side-menu li .active {
   border-left: 3px solid #d19b3d;
-  background-color: #4f5b69;
+  background-color: #186218;
 }
 .nav-side-menu ul .sub-menu li.active,
 .nav-side-menu li .sub-menu li.active {
-  color: #d19b3d;
+  color: #186218;
 }
 .nav-side-menu ul .sub-menu li.active a,
 .nav-side-menu li .sub-menu li.active a {
-  color: #d19b3d;
+  color: #186218;
 }
 .nav-side-menu ul .sub-menu li,
 .nav-side-menu li .sub-menu li {
-  background-color: #181c20;
+  background-color: #186218;
   border: none;
   line-height: 28px;
   border-bottom: 1px solid #23282e;
@@ -74,7 +74,7 @@
 }
 .nav-side-menu ul .sub-menu li:hover,
 .nav-side-menu li .sub-menu li:hover {
-  background-color: #020203;
+  background-color: #186218;
 }
 .nav-side-menu ul .sub-menu li:before,
 .nav-side-menu li .sub-menu li:before {
@@ -101,7 +101,7 @@
 }
 .nav-side-menu li:hover {
   border-left: 3px solid #d19b3d;
-  background-color: #4f5b69;
+  background-color: #186218;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -o-transition: all 1s ease;
@@ -122,7 +122,7 @@
     top: 10px;
     z-index: 10 !important;
     padding: 3px;
-    background-color: #ffffff;
+    background-color: #186218;
     color: #000;
     width: 40px;
     text-align: center;
