--- a/src/main/resources/templates/fragments/rol/rolshow.html
+++ b/src/main/resources/templates/fragments/rol/rolshow.html
@@ -3,13 +3,14 @@
 <head lang="en">
 
     <title>SISADMRH</title>
-     <th:block th:include="../templates/header"></th:block>
- 
-
-  
+     <th:block th:include="../templates/header"></th:block> 
 </head>
 <body>
-<div class="container">
+<div class="row">
+     <div class="col-md-3">
+                        <th:block th:include="../templates/menu"></th:block>
+                    </div>
+    <div class="col-md-9">
     <h2>Datos de Rol</h2>
         <div>
             <form class="form-horizontal">
@@ -33,6 +34,7 @@
                 </div>
                 
             </form>
+    </div>
     </div>
 </div>
 
