--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -3,11 +3,18 @@
 <head lang="en">
 
     <title>Nuevo usuario</title>
-  <th:block th:include="../templates/header"></th:block>
+   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>Usuario Details</h2>
+<div class="row">
+      <div class="col-md-3">
+                        <th:block th:include="../templates/menu"></th:block>
+                    </div>
+     <div class="col-md-9">
+          <div class="row text-center">
+                        <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
+                    </div>
+        <h3 align="center">Detalle de Usuarios</h3>
     <div>
         <form class="form-horizontal" th:object="${usuario}" th:action="@{../usuario}" method="post" >
             <input type="hidden" th:field="*{codigousuario}"/>
@@ -37,7 +44,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">estado:</label>
+                <label class="col-sm-2 control-label">Estado:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control numeros" size="11" maxlength="11" th:field="*{estadousuario}"/>
                 </div>
@@ -49,13 +56,13 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">fecha de caducidad:</label>
+                <label class="col-sm-2 control-label">Fecha de caducidad:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{fechacaducidad}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">fecha de baja:</label>
+                <label class="col-sm-2 control-label">Fecha de baja:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{fechabaja}"/>
                 </div>
@@ -66,6 +73,7 @@
             </div>
         </form>
     </div>
+     </div>
 </div>
 
 </body>
