--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,10 @@
             <th:block th:include="menu"></th:block>
         </div>
         <div class="col-md-8">
-            
+            <br>  <br>
+            <div class="row text-center">
+                        <img src="../../static/image/rrh.png" width="600" th:src="@{/image/rrh.png}"/>
+                    </div>
         </div>
         <div class="col-md-12">
             <th:block th:include="footer"></th:block>
