--- a/src/main/resources/templates/fragments/estado/estadoform.html
+++ b/src/main/resources/templates/fragments/estado/estadoform.html
@@ -13,7 +13,7 @@
         <div class="col-md-8">
             <h3 align="center" >Detalle de estados</h3>
     <div>
-        <form class="form-horizontal" th:object="${estado}" th:action="@{../estado}" method="post">
+        <form class="form-horizontal" th:object="${formestado}" th:action="@{../estado}" method="post">
 <!--            <input type="hidden" th:field="*{codigoestado}"/>
             <input type="hidden" th:field="*{nombreestado}"/>-->
 <!--            <div class="form-group">
@@ -23,18 +23,21 @@
                 </div>
             </div>-->
             <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de estado:</label>
+                <label class="col-sm-2 control-label">Nombre del estado:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{nombreestado}"/>
+                    <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{estado.nombreestado}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Valor de estado:</label>
+                <label class="col-sm-2 control-label">estado superior:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{valorestado}"/>
+                    <select class="form-control" th:field="*{estado.codigoestadosuperior}" >
+                         <option value="">-- Seleccione el estado superior --</option>
+                                <option th:each="c:${formestado.estados}" th:value="${c.codigoestado}" th:text="${c.nombreestado}"></option>
+                            </select>
+                    <!--<input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>-->
                 </div>
             </div>
-      
            <div class="col-md-12">
             <div class="row" align="center">
                 <button type="button" class="btn btn-default"><a href="#" th:href="@{/estados/}">Regresar</a></button>
