--- a/src/main/resources/templates/fragments/estado/estados.html
+++ b/src/main/resources/templates/fragments/estado/estados.html
@@ -20,13 +20,13 @@
             <tr th:each="estado : ${estados}">
                 <td th:text="${estado.codigoestado}">Codigo</td>
                 <td th:text="${estado.nombreestado}">Nombre</td>
-                <td th:text="${estado.valorestado}">valor</td>
+                <td th:text="${estado.codigoestadosuperior}">superior</td>
                 
                 
                 
                 <td><a th:href="${'./show/' + estado.codigoestado}" class="btn btn-default">Mostrar</a>
-                <a th:href="${'./edit/' + estado.codigoestado}" class="btn btn-default">Edit</a>
-                <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${estado.codigoestado} + '\');'" >Delete</a></td>
+                <a th:href="${'./edit/' + estado.codigoestado}" class="btn btn-default">Editar</a>
+                <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${estado.codigoestado} + '\');'" >Eliminar</a></td>
                 <!--<a th:href="${'./delete/' + estado.codigoestado}" class="btn btn-danger">Delete</a>-->
                 </td>
             </tr>
