--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,16 +5,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
         <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" media="screen"/>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        
+         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+              <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-        <script type="text/javascript" th:src="@{/js/jquery.mask.min.js}"></script>
-        <script type="text/javascript" th:src="@{/js/validacion_controladores.js}"></script>
-        <script type="text/javascript" th:src="@{/js/validacion_controladores2.js}"></script>
-        
+
     </head>
 
     <body>
@@ -30,7 +27,7 @@
                          <div class="row text-center">
                         <div class="">
                             <h2>Ministerio de Justicia y Seguridad Publica</h2>
-                            <h2>Direccion de Recursos Humanos</h2>
+                            <h2>Departamento de Recursos Humanos</h2>
                             <h2>SISADMRH</h2>
                         </div>
                     </div>
@@ -40,6 +37,8 @@
                         <img src="../../static/image/mjsp.png" width="200" th:src="@{/image/mjsp.png}"/>
                     </div>
                    </div>
+                    <div class="celdauser"> <b th:if="${messageuser != null}" th:utext="${messageuser}" ></b><br>
+                    <a th:if="${#request.userPrincipal != null}" th:href="@{/logout}">Cerrar Session</a></div>
                     
                     <!--
                     <div class="row text-center">
