commit de betillo

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -113,6 +113,15 @@
 <!--                                                 <li><a href="#" th:href="@{/asistenciacapacitaciones/report/}">Asistencia Capacitaciones</a></li>-->
 					</ul>
 				</li>
+                                
+                                 <li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Evualucion Capacitacion<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+					<ul class="dropdown-menu forAnimate" role="menu">
+						<li><a href="#" th:href="@{/evaluacioncapacitaciones/}">Consultar Evualucion Capacitacion</a></li>
+                                                 <li><a href="#" th:href="@{/evaluacioncapacitaciones/new/evaluacioncapacitacion}">Crear Evualucion Capacitacion</a></li>
+<!--                                                 <li><a href="#" th:href="@{/asistenciacapacitaciones/report/}">Asistencia Capacitaciones</a></li>-->
+					</ul>
+				</li>
                                                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Comites <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
