--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
@@ -20,7 +20,8 @@
 ca.departamentoresponsable,ca.fechacapacitaciondesde,ca.fechacapacitacionhasta from empleado e 
 inner join empleadopuesto ep on e.codigopuesto=ep.codigopuesto
  inner join puesto p on ep.codigopuesto=p.codigopuesto 
- inner join capacitador c on e.codigoempleado=c.codigoempleado INNER JOIN capacitacion ca on c.codigocapacitador=c.codigocapacitador
+ inner join capacitador c on e.codigoempleado=c.codigoempleado
+ INNER JOIN capacitacion ca on c.codigocapacitador=ca.codigocapacitador
 where ca.codigocapacitacion=$P{CODIGO}
 and fechacapacitaciondesde>=$P{FECHAINICIO}
 and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
