--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionesreport.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionesreport.html
@@ -10,17 +10,21 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE REPORTE DE CUMPLEANIEROS</h3>
+            <h3>GENERACION DE REPORTE DE CAPACITACIONES</h3>
             <div>
-                <form class="form-horizontal" id="formreport">
-<!--
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo de empleado:</label>
+                <form class="form-horizontal" id="formcapacitacion" th:object="${capacitaciones}">
+
+                   <div class="form-group">
+                        <label class="col-sm-3 control-label" >Nombre Capacitacion:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <select class="form-control" id="codigo" name="codigo">
+                            <option value="0">-- Seleccione la Capacitacion --</option>
+                            <option th:each="d:${capacitaciones}" th:value="${d.codigocapacitacion}" th:text="${d.nombrecapacitacion}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
-                    </div>-->
-<!--                     <div class="form-group">    
+                    </div>
+                     <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha Inicial:</label>
                         <div class="col-sm-3">
                             <input type="text" class="form-control" id="fechainicial" name="fechainicial"/>
@@ -29,7 +33,7 @@
                         <div class="col-sm-3">
                             <input type="text" class="form-control" id="fechafinal" name="fechafinal"/>
                         </div>
-                    </div>-->
+                    </div>
                      <div class="form-group">    
                          <td><a class="btn btn-default" id="generar">Generar</a></td>
                     </div>
@@ -51,8 +55,8 @@
             dateFormat: 'yy-mm-dd'
         });
         $('#generar').click(function(){
-            $("#formreport").attr('action', '../cumpleanieros/1');
-            $("form#formreport").submit();
+            $("#formcapacitacion").attr('action', '../pdf/'+ $("#codigo").val().toString());
+            $("form#formcapacitacion").submit();
             
         });
     });
