--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-    <title>Nueva Asistencia Capacitacion</title>
+    <title>Crear Asistencia Capacitacion</title>
     <th:block th:include="../templates/header"></th:block>
+    <div ><label  >pnt_asca</label> </div>
 </head>
 <body>
     <div class="row">
@@ -10,7 +11,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
-            <h3 align="center">Nueva Asistencias de Capacitacion</h3>
+            <h3 align="center">Crear Asistencias de Capacitacion</h3>
             <div>
                 <form class="form-horizontal" id="formascap" th:object="${formasistenciacapacitancion}" th:action="@{../asistenciacapacitacion}" method="post">
                     <div class="form-group">
