--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -3,13 +3,14 @@
 
     <head lang="en">
 
-        <title>Nueva Capacitacion</title>
-         <th:block th:include="../templates/header"></th:block>
+        <title>Crear Capacitacion</title>
+<!--         <th:block th:include="../templates/header"></th:block>-->
         <link rel="stylesheet"
 	th:href="@{/css/bootstrap.min.css}" />
 <link rel="stylesheet"
 	th:href="@{/css/jquery-ui.min.css}" />
     <th:block th:include="../templates/header"></th:block>
+    <div ><label  >pnt_ceca</label> </div>
 </head>
 <body>
     <div class="row">
@@ -17,7 +18,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
-            <h3>Nueva Capacitacion</h3>
+            <h3 align="center">Crear Capacitacion</h3>
             <div>
                 <form class="form-horizontal" th:object="${capacitacion}" th:action="@{../capacitacion}" method="post">
 
