--- a/src/main/resources/templates/fragments/comision/comisionform.html
+++ b/src/main/resources/templates/fragments/comision/comisionform.html
@@ -4,6 +4,7 @@
 
         <title>Nueva Comision</title>
     <th:block th:include="../templates/header"></th:block>
+    <div ><label  >pnt_gecoms</label> </div>
 </head>
 <body>
     <div class="container">
