--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Nuevo Nivel Escolaridad</title>
+    <title>Formacion Academica</title>
   <th:block th:include="../templates/header"></th:block>
+  <div ><label  >pnt_cem4</label> </div>
   </head>
 <body>
 <div class="row">
