--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -7,8 +7,9 @@
   
 <head lang="en">
 
-    <title>Nuevo Comite</title>
+    <title>Crear Comite</title>
   <th:block th:include="../templates/header"></th:block>
+  <div ><label  >pnt_crco</label> </div>
   </head>
 <body>
     <div class="row">
@@ -16,7 +17,7 @@
          <th:block th:include="../templates/menu"></th:block>
     </div> 
         <div class="col-md-8">
-             <h3 align="center" >Llene El Formulario de Comite</h3>
+             <h3 align="center" >Crear Comite</h3>
     <div>
         <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
 <!--          <input type="hidden" th:field="*{codigocomite}"/>-->
