--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
@@ -3,7 +3,7 @@
 
     <head lang="en">
 
-        <title>Crear Evaluacion Capacitacion</title>
+        <title>Crear Evaluacion de Capacitacion</title>
       
     <th:block th:include="../templates/header"></th:block>
 </head>
@@ -22,7 +22,7 @@ var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script> </div>
         <div class="col-md-8">
-            <h3 align="center">Crear Evaluacion Capacitacion</h3>
+            <h3 align="center">Crear Evaluacion  de Capacitacion</h3>
             <div>
  
                 <form class="form-horizontal" th:object="${evaluacioncapacitacion}" th:action="@{../evaluacioncapacitacion}" method="post">       
